# github-repo-recommender

./: .gitignore  README.md  deploy_setup.sh  environment.yml  main.py  packages.txt  pyproject.toml  requirements-deploy.txt  requirements.txt  setup.py  streamlit-dependencies.txt
.streamlit/: config.toml  deploy_config.toml  secrets.toml
src/github_recommender/: __init__.py  models.py  recommender.py
src/github_recommender/services/: __init__.py  embedding_service.py  repository_service.py
