[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-repo-recommender"
version = "1.0.0"
description = "An AI-powered GitHub repository recommender using semantic search"
requires-python = ">=3.9,<3.10"
dependencies = [
    "streamlit==1.32.0",
    "sentence-transformers==2.2.2",
    "PyGithub==2.1.1",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2",
    "loguru==0.7.2",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers==4.31.0",
    "tokenizers==0.13.3",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.2",
    "huggingface-hub>=0.13.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.5.0",
    "filelock>=3.12.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["github_recommender"]