[build-system]
requires = ["setuptools>=61.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-repo-recommender"
version = "1.0.0"
description = "An AI-powered GitHub repository recommender using semantic search"
requires-python = ">=3.9,<3.10"

[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0"
]